[package]
name = "verify-stark"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Lightweight crate to verify a v2 STARK proof"

[dependencies]
openvm-circuit = { workspace = true }
stark-backend-v2 = { workspace = true }
stark-recursion-circuit-derive = { workspace = true }

bitcode = { workspace = true }
eyre = { workspace = true }
p3-field = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
zstd = { workspace = true }

[features]
default = ["parallel"]
parallel = ["stark-backend-v2/parallel"]
