[package]
name = "openvm-verify-stark-v2"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Lightweight crate to verify a v2 STARK proof"

[dependencies]
openvm-circuit = { workspace = true }
stark-backend-v2 = { workspace = true }

bitcode = { workspace = true }
eyre = { workspace = true }
p3-field = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
zstd = { workspace = true }

[dev-dependencies]
clap = { workspace = true, features = ["derive"] }

[features]
default = ["parallel"]
parallel = ["stark-backend-v2/parallel"]
